# 1

./: .gitignore  README.md  install_cosyvoice.bat
MOSS-TTS-Nano/: onnx_tts_runtime.py  text_normalization_pipeline.py
StoryBrain/: .gitignore  gradlew  import_to_neo4j.py  settings.gradle.kts
StoryBrain/app/: build.gradle.kts  proguard-rules.pro
StoryBrainManager/: .gitignore  README.md  adb_connect.bat  gen_mock_novel.py  gen_mock_novel.py.metadata.json  index.html  mock_novel.txt  package-lock.json  package.json  parse_ui.py  parse_ui.py.metadata.json  test_api.py  test_api.py.metadata.json  test_chattts.py  test_chattts.py.metadata.json  tsconfig.json  vite.config.ts  双击运行管理器.bat
StoryBrainManager/engine/: StoryBrain配音管理器.spec  StoryBrain配音管理器_cosyvoice.spec  app_chattts.py  app_cosyvoice.py
StoryBrainManager/src/: App.tsx  index.css
StoryBrainManager/src-tauri/: Cargo.toml  tauri.conf.json
StoryBrainManager/src-tauri/capabilities/: default.json
StoryBrainManager/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
StoryBrainManager/src-tauri/src/audio/: format.rs  merge.rs  mod.rs  wav_header.rs
StoryBrainManager/src-tauri/src/commands/: audio_merge.rs  audio_record.rs  llm_extract.rs  mod.rs  ping.rs  project.rs  settings.rs  synthesize.rs
StoryBrainManager/src-tauri/src/llm/: deepseek_client.rs  fallback.rs  mod.rs  schema.rs
archives/antigravity-awesome-skills/: .gitignore  .snyk  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  START_APP.bat  package-lock.json  package.json  walkthrough.md
plant/: danao.txt  xianzaimud.txt
(+1340 files in other folders)
